--- a/index.html
+++ b/index.html
@@ -1,40 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="conteiner">
-        <div class="head">
-            <a href="indexup.html">
-                <h2>SINGUP</h2>
-            </a>
+      <div class="head">
+        <a href="indexup.html">
+          <h2>SINGUP</h2>
+        </a>
+      </div>
+      <div class="input">
+        <h3>username</h3>
+        <div class="icon">
+          <img src="user.svg" alt="" />
+          <input type="text" placeholder="Type your username" />
         </div>
-        <div class="input">
-            <h3>username</h3>
-            <div class="icon">
-                <img src="user.svg" alt="">
-                <input type="text" placeholder="Type your username">
-            </div>
-            <hr>
-            <h3>password</h3>
-            <div class="icon">
-                <img src="password.svg" alt="">
-                <input type="password" placeholder="Type your password">
-            </div>
-            <hr>
+        <hr />
+        <h3>password</h3>
+        <div class="icon">
+          <img src="password.svg" alt="" />
+          <input type="password" placeholder="Type your password" />
         </div>
-        <div class="button">
-            <button>SINGUP</button>
-        </div>
+        <hr />
+      </div>
+      <div class="button">
+        <button>SINGUP</button>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
